--- a/CDC_Vaccination_Scraper.Rmd
+++ b/CDC_Vaccination_Scraper.Rmd
@@ -11,9 +11,7 @@ library(rvest)
 library(tidyverse)
 ```
 
-```{r}
-rec_levels = c("All travelers", "Most travelers", "Some travelers")
-
+```{r functions}
 remove_rest_of_colname = function(x) {
     str_replace(x, "\\r\\n .*", "")
 }
@@ -32,14 +30,7 @@ make_country_df_tidy = function(df, rec_levels, country_name) {
   # names(country) = valid_column_names
   
   country %>% 
-    #select(-c("Find.Out.Why", "Protect.Yourself")) %>% 
     select(-c(`Clinical Guidance for Healthcare providers`)) %>% 
-    # mutate(X = remove_rest_of_colname(X)) %>% 
-    # rowwise() %>% 
-    # mutate(Rec_Level = make_rec_level(X, rec_levels)) %>% 
-    # ungroup() %>% 
-    # fill(Rec_Level) %>% 
-    # filter(!(X %in% rec_levels)) %>% 
     rename(Vaccine = `Vaccines for disease`) %>% 
     add_column(Country = rep.int(country_name, nrow(.))) %>% 
     select(Country, everything())
@@ -47,13 +38,13 @@ make_country_df_tidy = function(df, rec_levels, country_name) {
 ```
 
 
-```{r}
+```{r test_single_country}
 country = read_html("https://wwwnc.cdc.gov/travel/destinations/traveler/none/france") %>% html_node("#dest-vm-a") %>% html_table()
 
 tidy_country = make_country_df_tidy(country, rec_levels, "france")
 ```
 
-```{r}
+```{r get_all_destination_data}
 url_list = read_html("https://wwwnc.cdc.gov/travel/destinations/list") %>% 
             html_nodes(".list-bullet a") %>% 
             html_attr(name = "href")
@@ -79,24 +70,23 @@ for (url in url_list) {
   } else {
     big_df = big_df %>% add_row(Country = country_name, Vaccine = NA)
   }
-  
-  
 
+  # wait 3 seconds before scraping again
   Sys.sleep(3)
 }
 
 ```
 
-```{r}
+```{r distinct_rows}
 big_df = big_df %>% distinct()
 ```
 
 
-```{r}
+```{r write_df_to_csv}
 write_csv(big_df, "full_country_vaccine_list.csv")
 ```
 
-```{r}
+```{r plot1}
 big_df %>% drop_na() %>% 
   ggplot() + geom_bar(aes(x=fct_infreq(Vaccine))) +
   theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1)) +
@@ -105,10 +95,5 @@ big_df %>% drop_na() %>%
     y = "Number of Destinations",
     x = "Vaccine"
   )
-```
-
-
-```{r}
-big_df %>% drop_na() %>% filter(str_detect(Vaccine, "Malaria"))
 ```
 
